added whitespace plugin

--- a/prism.css
+++ b/prism.css
@@ -1,5 +1,5 @@
 /* PrismJS 1.14.0
-https://prismjs.com/download.html#themes=prism-tomorrow&languages=markup+css+clike+javascript+c+csharp+bash+cpp+aspnet+markup-templating+java+json+kotlin+lisp+php+sql+powershell+python+r+typescript+scss+plsql&plugins=autoloader */
+https://prismjs.com/download.html#themes=prism-tomorrow&languages=markup+css+clike+javascript+c+csharp+bash+cpp+aspnet+markup-templating+java+json+kotlin+lisp+php+sql+powershell+python+r+typescript+scss+plsql&plugins=autoloader+normalize-whitespace */
 /**
  * prism.js tomorrow night eighties for JavaScript, CoffeeScript, CSS and HTML
  * Based on https://github.com/chriskempson/tomorrow-theme
